Bug 878023 - [Australis] Use repeating instead of stretching for the middle background of hovered tabs in order to avoid seams on OS X due to CoreGraphics not supporting ExtendMode::CLAMP. r=MattN
UltraBlame original commit: 3bbf61b9d523a64725c4fbab85922c71bd0452f3

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -19968,31 +19968,6 @@ png
 ;
 }
 .
-tabbrowser
--
-tab
-:
-hover
->
-.
-tab
--
-stack
->
-.
-tab
--
-background
-:
-not
-(
-[
-selected
-=
-true
-]
-)
-.
 tabs
 -
 newtab
@@ -20047,6 +20022,186 @@ middle
 .
 png
 )
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+background
+-
+end
+2x
+.
+png
+)
+;
+}
+.
+tabbrowser
+-
+tab
+:
+hover
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+>
+.
+tab
+-
+background
+-
+middle
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+background
+-
+middle
+2x
+.
+png
+)
+;
+}
+.
+tabbrowser
+-
+tab
+:
+hover
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+>
+.
+tab
+-
+background
+-
+start
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+background
+-
+start
+2x
+.
+png
+)
+;
+}
+.
+tabbrowser
+-
+tab
+:
+hover
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+>
+.
+tab
+-
+background
+-
+end
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+{
+background
+-
+image
+:
 url
 (
 chrome
