--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -1555,31 +1555,6 @@ transparent
 ;
 }
 .
-tabbrowser
--
-tab
-:
-hover
->
-.
-tab
--
-stack
->
-.
-tab
--
-background
-:
-not
-(
-[
-selected
-=
-true
-]
-)
-.
 tabs
 -
 newtab
@@ -1695,6 +1670,282 @@ tabCurveWidth
 tabCurveWidth
 100
 %
+;
+}
+.
+tabbrowser
+-
+tab
+:
+hover
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+>
+.
+tab
+-
+background
+-
+middle
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+background
+-
+middle
+.
+png
+)
+;
+background
+-
+repeat
+:
+repeat
+-
+x
+;
+background
+-
+size
+:
+auto
+100
+%
+;
+}
+.
+tabbrowser
+-
+tab
+:
+hover
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+>
+.
+tab
+-
+background
+-
+start
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+.
+tabbrowser
+-
+tab
+:
+hover
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+>
+.
+tab
+-
+background
+-
+end
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+{
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+background
+-
+size
+:
+100
+%
+100
+%
+;
+}
+.
+tabbrowser
+-
+tab
+:
+hover
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+>
+.
+tab
+-
+background
+-
+start
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+background
+-
+start
+.
+png
+)
+;
+}
+.
+tabbrowser
+-
+tab
+:
+hover
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+>
+.
+tab
+-
+background
+-
+end
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+background
+-
+end
+.
+png
+)
 ;
 }
 .
